<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/CustomRelativeLayout"
	android:background="#000000">

	<ImageView
		android:id="@+id/mainlogo"
		style="@style/CustomLogoImageView"
		android:layout_width="202dp"
		android:layout_height="161dp"
		android:src="@drawable/home_screen_icon"
		app:layout_constraintBottom_toTopOf="@+id/LoginButton"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.537" />


	<TextView
		android:id="@+id/profile"
		style="@style/CustomStatusTextView"
		android:layout_below="@id/mainlogo"
		android:layout_marginTop="78dp"
		android:textColor="@color/white"
		tools:text="@string/app_name" />

	<com.google.android.gms.common.SignInButton
		android:id="@+id/sign_in_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:visibility="visible"
		tools:visibility="gone" />

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/sign_out_and_disconnect"
		android:layout_width="381dp"
		android:layout_height="216dp"
		android:layout_below="@id/profile"
		android:layout_marginTop="185dp"
		android:orientation="horizontal"
		android:visibility="gone"
		tools:visibility="visible">

		<Button
			android:id="@+id/sign_out_button"
			style="?android:attr/button"
			android:layout_width="356dp"
			android:layout_height="54dp"
			android:layout_weight="1"
			android:text="@string/sign_out"
			android:textColorLink="#FFFFFF"
			android:theme="@style/ThemeOverlay.MyDarkButton"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.478"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.901" />

		<Button
			android:id="@+id/disconnect_button"
			style="?android:attr/button"
			android:layout_width="356dp"
			android:layout_height="54dp"
			android:layout_weight="1"
			android:text="@string/continue_to_dashboard"
			android:theme="@style/ThemeOverlay.MyDarkButton"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.478"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.327" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>