<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".Activities.DashboardActivity">

    <include
        android:id="@+id/toolbar_dashboard"
        layout="@layout/toolbar_main" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="2">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/Inventory_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:layout_marginTop="32dp"
            android:onClick="choseInventory"
            app:cardCornerRadius="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/teal_200"
                android:fontFamily="@font/architects_daughter"
                android:gravity="center"
                android:text="@string/inventory"
                android:textSize="16sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/Tasks_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:layout_marginTop="32dp"
            android:onClick="choseTasks"
            app:cardCornerRadius="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple_200"
                android:fontFamily="@font/architects_daughter"
                android:gravity="center"
                android:text="@string/tasks"
                android:textSize="16sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/Notes_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:layout_marginBottom="32dp"
            android:onClick="choseNotes"
            app:cardCornerRadius="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple_500"
                android:fontFamily="@font/architects_daughter"
                android:gravity="center"
                android:text="@string/notes"
                android:textSize="16sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/Diary_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:layout_marginBottom="32dp"
            android:onClick="choseDiary"
            app:cardCornerRadius="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple_700"
                android:fontFamily="@font/architects_daughter"
                android:gravity="center"
                android:text="@string/diary"
                android:textSize="16sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

    </GridLayout>
</LinearLayout>